tests/baselines/reference/mergeClassInterfaceAndModule.errors.txt
mergeClassInterfaceAndModule.ts(3,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergeClassInterfaceAndModule.ts(7,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergeClassInterfaceAndModule.ts(10,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergeClassInterfaceAndModule.ts(13,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== mergeClassInterfaceAndModule.ts (4 errors) ====
    interface C1 {}
    declare class C1 {}
    module C1 {}
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
    declare class C2 {}
    interface C2 {}
    module C2 {}
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
    declare class C3 {}
    module C3 {}
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    interface C3 {}
    
    module C4 {}
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    declare class C4 {} // error -- class declaration must precede module declaration
    interface C4 {}